    See PR rtl-optimization/85412. Closes: #916591.
  * Fix PR sanitizer/88426, taken from the trunk. Closes: #916388.
  * Fix perl shebang for the gnathtml binary.
  * Lower priority of libgcc[124] and libstdc++6 packages.
  * Don't add the libstdc++6 breaks for releases newer than stretch.
  * libgccjit-doc: Install image files.
  * Stop building gnat on powerpcspe. Closes: #912649.

 -- Matthias Klose <doko@debian.org>  Tue, 18 Dec 2018 04:21:11 +0100

gcc-8 (8.2.0-12) unstable; urgency=medium

  * Update to SVN 20181209 (r266918) from the gcc-8-branch.
    - Fix PR fortran/88048, PR fortran/88025.
  * Back-out the fix for PR c++/87531. Closes: #915980.

 -- Matthias Klose <doko@debian.org>  Sun, 09 Dec 2018 11:02:40 +0100

gcc-8 (8.2.0-11) unstable; urgency=medium

  * Update to SVN 20181206 (r266855) from the gcc-8-branch.
    - Fix PR libstdc++/70694, PR libstdc++/88199, PR tree-optimization/87288,
      PR target/81685, PR target/87496 (PPC), PR tree-optimization/79351,
      PR tree-optimization/88229, PR target/84711 (ARM), PR c++/88120,
      PR c++/87531, PR fortran/88073, PR fortran/88143, PR libfortran/88137,
      PR libfortran/88137.
  * Back-out the gcc-search-prefixed-as-ld patch. See #915194.

 -- Matthias Klose <doko@debian.org>  Fri, 07 Dec 2018 00:06:23 +0100

gcc-8 (8.2.0-10) unstable; urgency=medium

  * Update to SVN 20181123 (r266402) from the gcc-8-branch.
    - Fix PR libstdc++/87822, PR libstdc++/87809, PR rtl-optimization/85925,
      PR gcov-profile/88045, PR target/87928 (x86), PR debug/88006,
      PR debug/87462, PR target/85968 (ARC), PR middle-end/58372,
      PR target/87867 (ARM), PR tree-optimization/87859, PR sanitizer/87837,
      PR middle-end/87647, PR middle-end/85488, PR middle-end/87649,
      PR c++/86246, PR c++/87989, PR c++/86288, PR fortran/87725,
      PR fortran/87597, PR lto/88077, PR libfortran/78351,
      PR libstdc++/85930, PR libstdc++/87520, PR target/88051 (x86).

  [ Matthias Klose ]