@@ -15,6 +15,8 @@ gcc-8 (8.2.0-13) UNRELEASED; urgency=medium
   * Don't add the libstdc++6 breaks for releases newer than stretch.
   * libgccjit-doc: Install image files.
   * Stop building gnat on powerpcspe. Closes: #912649.
+  * Don't provide <frontend>-compiler names for cross compiler packages.
+    Addresses: #916376.  Not a final solution.
 
  -- Matthias Klose <doko@debian.org>  Tue, 18 Dec 2018 04:21:11 +0100
 
